feat: update to template 0.1.0

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,6 +1,6 @@
 ---
 # Changes here will be overwritten by Copier
-_commit: e0c578e
+_commit: 0.1.0
 _src_path: gh:pa-decarvalho/ansible-collection-template
 author_email: philippe.andre.decarvalho@gmail.com
 author_name: PA De Carvalho
