--- a/roles/minecraft/tasks/main.yml
+++ b/roles/minecraft/tasks/main.yml
@@ -1,4 +1,3 @@
 ---
-- name: Test
-  ansible.builtin.debug:
-    msg: Hello world !
+- name: Main | Include user.yml
+  ansible.builtin.include_tasks: user.yml
