--- a/roles/minecraft/defaults/main.yml
+++ b/roles/minecraft/defaults/main.yml
@@ -1,4 +1,6 @@
 ---
 minecraft_user_name: minecraft
 minecraft_base_directory: /opt/minecraft
-minecraft_version: 1.21.0
+minecraft_version: 1.21.5
+
+minecraft_manifest_url: https://launchermeta.mojang.com/mc/game/version_manifest.json
