--- a/roles/minecraft/tasks/main.yml
+++ b/roles/minecraft/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: Main | Include dependencies.yml
+  ansible.builtin.include_tasks: dependencies.yml
+
 - name: Main | Include user.yml
   ansible.builtin.include_tasks: user.yml
 
