--- a/roles/minecraft/tasks/main.yml
+++ b/roles/minecraft/tasks/main.yml
@@ -10,3 +10,6 @@
 
 - name: Main | Include download.yml
   ansible.builtin.include_tasks: download.yml
+
+- name: Main | Include configure.yml
+  ansible.builtin.include_tasks: configure.yml
