feat: add minecraft service

--- a/roles/minecraft/tasks/main.yml
+++ b/roles/minecraft/tasks/main.yml
@@ -13,3 +13,6 @@
 
 - name: Main | Include configure.yml
   ansible.builtin.include_tasks: configure.yml
+
+- name: Main | Include service.yml
+  ansible.builtin.include_tasks: service.yml
