--- a/roles/minecraft/defaults/main.yml
+++ b/roles/minecraft/defaults/main.yml
@@ -4,3 +4,8 @@ minecraft_base_directory: /opt/minecraft
 minecraft_version: 1.21.5
 
 minecraft_manifest_url: https://launchermeta.mojang.com/mc/game/version_manifest.json
+
+minecraft_java_xms: 1024M
+minecraft_java_xmx: 1024M
+
+minecraft_console_fifo: "{{ minecraft_base_directory }}/run/console"
