feat: refactor installation

--- a/roles/minecraft/tasks/download.yml
+++ b/roles/minecraft/tasks/download.yml
@@ -7,14 +7,14 @@
 
 - name: Download | Get manifest file for {{ minecraft_version }}
   ansible.builtin.uri:
-    url: "{{ minecraft_manifest.json.versions | selectattr('id','match', (minecraft_version|string) ) | map(attribute='url')  | list | first }}"
+    url: "{{ minecraft_manifest.json.versions | selectattr('id', 'match', (minecraft_version | string)) | map(attribute='url') | list | first }}"
     return_content: true
   register: minecraft_manifest_version
 
 - name: Download | Download Minecraft server jar
   ansible.builtin.get_url:
     url: "{{ minecraft_manifest_version.json.downloads.server.url }}"
-    dest: "{{ minecraft_base_directory }}/jar/{{ minecraft_version }}/server.jar"
+    dest: "{{ minecraft_base_directory }}/versions/{{ minecraft_version }}/server.jar"
     checksum: "sha1:{{ minecraft_manifest_version.json.downloads.server.sha1 }}"
     owner: "{{ minecraft_user_name }}"
     group: "{{ minecraft_user_name }}"
