--- a/roles/minecraft/tasks/configure.yml
+++ b/roles/minecraft/tasks/configure.yml
@@ -2,7 +2,7 @@
 - name: Configure | Template server.properties file
   ansible.builtin.template:
     src: server.properties.j2
-    dest: "{{ minecraft_base_directory }}/server.properties"
+    dest: "{{ minecraft_base_directory }}/versions/current/server.properties"
     owner: "{{ minecraft_user_name }}"
     group: "{{ minecraft_user_name }}"
     mode: "0640"
@@ -10,7 +10,7 @@
 - name: Configure | Copy eula.txt file
   ansible.builtin.copy:
     src: eula.txt
-    dest: "{{ minecraft_base_directory }}/eula.txt"
+    dest: "{{ minecraft_base_directory }}/versions/current/eula.txt"
     owner: "{{ minecraft_user_name }}"
     group: "{{ minecraft_user_name }}"
     mode: "0640"
