feat: add server.properties ansible variables

--- a/roles/minecraft/defaults/main.yml
+++ b/roles/minecraft/defaults/main.yml
@@ -9,3 +9,66 @@ minecraft_java_xms: 1024M
 minecraft_java_xmx: 1024M
 
 minecraft_console_fifo: "{{ minecraft_base_directory }}/run/console"
+
+# server.properties
+minecraft_accepts_transfers: false
+minecraft_allow_flight: false
+minecraft_allow_nether: true
+minecraft_broadcast_console_to_ops: true
+minecraft_broadcast_rcon_to_ops: true
+minecraft_bug_report_link:
+minecraft_difficulty: easy
+minecraft_enable_command_block: false
+minecraft_enable_jmx_monitoring: false
+minecraft_enable_query: false
+minecraft_enable_rcon: false
+minecraft_enable_status: true
+minecraft_enforce_secure_profile: true
+minecraft_enforce_whitelist: false
+minecraft_entity_broadcast_range_percentage: 100
+minecraft_force_gamemode: false
+minecraft_function_permission_level: 2
+minecraft_gamemode: survival
+minecraft_generate_structures: true
+minecraft_generator_settings: "{}"
+minecraft_hardcore: false
+minecraft_hide_online_players: false
+minecraft_initial_disabled_packs:
+minecraft_initial_enabled_packs: vanilla
+minecraft_level_name: world
+minecraft_level_seed:
+minecraft_level_type: minecraft\:normal
+minecraft_log_ips: true
+minecraft_max_chained_neighbor_updates: 1000000
+minecraft_max_players: 20
+minecraft_max_tick_time: 60000
+minecraft_max_world_size: 29999984
+minecraft_motd: A Minecraft Server
+minecraft_network_compression_threshold: 256
+minecraft_online_mode: true
+minecraft_op_permission_level: 4
+minecraft_pause_when_empty_seconds: 60
+minecraft_player_idle_timeout: 0
+minecraft_prevent_proxy_connections: false
+minecraft_pvp: true
+minecraft_query_port: 25565
+minecraft_rate_limit: 0
+minecraft_rcon_password:
+minecraft_rcon_port: 25575
+minecraft_region_file_compression: deflate
+minecraft_require_resource_pack: false
+minecraft_resource_pack:
+minecraft_resource_pack_id:
+minecraft_resource_pack_prompt:
+minecraft_resource_pack_sha1:
+minecraft_server_ip:
+minecraft_server_port: 25565
+minecraft_simulation_distance: 10
+minecraft_spawn_monsters: true
+minecraft_spawn_protection: 16
+minecraft_sync_chunk_writes: true
+minecraft_text_filtering_config:
+minecraft_text_filtering_version: 0
+minecraft_use_native_transport: true
+minecraft_view_distance: 10
+minecraft_white_list: false
