--- a/roles/minecraft/defaults/main.yml
+++ b/roles/minecraft/defaults/main.yml
@@ -2,6 +2,11 @@
 minecraft_user_name: minecraft
 minecraft_base_directory: /opt/minecraft
 minecraft_version: 1.21.5
+minecraft_versions_folder: "{{ minecraft_base_directory }}/versions"
+minecraft_current_version_folder: "{{ minecraft_versions_folder }}/{{ minecraft_version }}"
+minecraft_current_version_link: "{{ minecraft_versions_folder }}/current"
+minecraft_world_folder: "{{ minecraft_base_directory }}/{{ minecraft_level_name }}"
+minecraft_logs_folder: "{{ minecraft_base_directory }}/logs"
 
 minecraft_manifest_url: https://launchermeta.mojang.com/mc/game/version_manifest.json
 
